<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="com.z.buhler.fitnesstracker.addCustomerActivity">

    <fragment android:name="com.z.buhler.fitnesstracker.DisplayUserFragment"
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/login_text_title"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_text_title"
            android:textSize="50sp"/>

        <ImageView
            android:contentDescription="@string/description_logo"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:cropToPadding="false"/>
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_edit_username"
        android:gravity="center"
        android:hint="@string/hint_username"
        android:inputType="text"
        android:padding="5dp" />

    <EditText
        android:id="@+id/login_edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/hint_password"
        android:text="@string/login_edit_password"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:layout_margin="10dp"
        android:id="@+id/login_button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button_login"/>

</LinearLayout>