<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customer_list_text_title"
            android:textSize="50sp"/>

        <ImageView
            android:contentDescription="@string/description_logo"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:cropToPadding="false"/>
    </LinearLayout>



    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="350dp"
        android:layout_width="wrap_content">

        <ListView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/customer_list_customer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:smoothScrollbar="true"/>

    </LinearLayout>

    <Button
        android:id="@+id/customer_list_button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/customer_list_button_add"
        android:layout_gravity="center"
        android:layout_margin="10dp"/>

</LinearLayout>
